Create Header and Footer

--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -43,6 +43,10 @@
                 
                 li{
                     margin: 24px 0 0;
+
+                    a{
+                        font-weight: bold;
+                    }
                 }
 
                 p{
