--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Avenir, sans-serif;
+    list-style-type: none;
 }
 
 body{
@@ -43,14 +44,26 @@ body{
 
 .text--big{
     @include text(18px);
+    
+    @media(max-width:768px){
+        @include text(15px);
+    }
 }
 
 .text{
     @include text;
+    
+    @media(max-width:768px){
+        @include text(14px);
+    }
 }
 
 .text--small{
     @include text(12px);
+
+    @media(max-width:768px){
+        @include text(11px);
+    }
 }
 
 .link-text{
@@ -61,14 +74,26 @@ body{
 
 .title{
     @include title;
+
+    @media(max-width:768px){
+        @include title(24px);
+    }
 }
 
 .title--big{
     @include title(44px);
+
+    @media(max-width:768px){
+        @include title(26px);
+    }
 }
 
 .title--small{
     @include title(28px);
+
+    @media(max-width:768px){
+        @include title(22px);
+    }
 }
 
 .button{
@@ -80,6 +105,7 @@ body{
     font-size: 18px;
     color: variaveis.$corTextoSecundario;
     background-color: variaveis.$corBotaoPrimary ;
+    cursor: pointer;
     text-transform: uppercase;
     border: none;
     border-radius: 4px;
@@ -118,6 +144,10 @@ body{
     grid-template-columns: 1fr 1fr;
     align-items: center;
 
+    @media(max-width:768px){
+        display: block;
+    }
+
     img{
         max-width: 100%;
     }
@@ -146,6 +176,13 @@ body{
             display: flex;
             flex-direction: column;
             justify-content: center;
+
+            @media(max-width:768px){
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
         }
     }
 }
+
