--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -17,6 +17,10 @@
                 display: block;
                 cursor: pointer;
                 position: relative;
+                
+                @media(max-width:768px){
+                    font-size: 15px;
+                }
 
                 &::after{
                     content: '+';
@@ -38,11 +42,11 @@
                 ul{
                     margin: 16px 0 0;
                     padding: 0 0 0 40px;
-                    list-style-type: disc;
                 }
                 
                 li{
                     margin: 24px 0 0;
+                    list-style-type: disc;
 
                     a{
                         font-weight: bold;
